--- a/package.json
+++ b/package.json
@@ -3,42 +3,32 @@
   "version": "0.0.1",
   "description": "BLACK WIDOW Company page.",
   "scripts": {
-    "lint": "eslint --quiet '**/*.js'",
-    "build": "webpack --config dev/webpack.config.js --mode development",
-    "build:production": "webpack --config dev/webpack.config.js --mode production --optimize-minimize --env.analytics=UA-11153361-20",
-    "serve": "http-server ./dist/",
-    "deploy": "npm run lint && node ./dev/deploy"
+    "lint": "tsc --noEmit && eslint --quiet '**/*.{js,ts}' && prettier --check '**/*.css'",
+    "lint:fix": "eslint --fix '**/*.{js,ts}' && prettier --write '**/*.css'",
+    "start": "vite",
+    "preview": "vite preview",
+    "build": "vite build"
   },
   "author": "Oskar Wrobel",
   "dependencies": {},
   "devDependencies": {
-    "@oskarwrobel/deploy-tools": "^1.3.3",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.2.0",
-    "eslint": "^6.5.1",
-    "eslint-config-ckeditor5": "^1.0.7",
-    "file-loader": "^4.2.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "http-server": "^0.11.1",
-    "husky": "^3.0.8",
-    "imports-loader": "^0.8.0",
-    "lint-staged": "^9.4.2",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.0",
-    "webpack": "^4.41.1",
-    "webpack-cli": "^3.3.9"
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.1.0",
+    "postcss-nesting": "^12.0.1",
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0",
+    "vite-plugin-html": "^3.2.0"
   },
   "lint-staged": {
-    "**/*.js": [
+    "**/*.(ts|js)": [
       "eslint --quiet"
     ]
   },
-  "eslintIgnore": [
-    "dist/**",
-    "src/scripts/analytics.js"
-  ],
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
